2002-03-01  Santhana krishnan  <santhana.krishnan@wipro.com>

	* applied a patch to fix problems on undo operatoins.
	* patch for the bug 71464 ( src/hex-document.c:319 )

2002-02-05  Jaka Mocnik  <jaka@gnu.org>

	* src/*: cut/copy/paste operations. probably behaves strangely at
	times and may even crash occasionally... needs some polishing.

2001-11-13  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c: added block marking and clipboard handling.
	* src/print.c: fixed to work with gnome-print >= 0.32.
	* configure.in: check for GnomePrint >= 0.32.

2001-09-08  Wang Jian  <lark@linux.net.cn>

	* configure.in(ALL_LINGUAS): Renamed zh_CN.GB2312 to zh_CN.

2001-08-31  Abel Cheung  <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): zh_TW.Big5 -> zh_TW

2001-08-10  Jaka Mocnik  <jaka@gnu.org>

	* applied a patch to fix problems on ppc platform.

2001-08-10  Jaka Mocnik  <jaka@gnu.org>

	* ghex.spec.in: updated. patch by Ludovic Danigo
	<ludovic.danigo@worldonline.fr>.

2001-07-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "nn" to ALL_LINGUAS.
	
2001-05-03 John Fleck <jfleck@inkstain.net>

	* patch to src/preferences.c to activate the help button on the
	preferences dialog. fixes bugzilla.gnome.org bug #54073

2001-05-03  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c: applied a patch for font width handling.

2001-04-15  Nathan Cullen <furyu@fuse.net>

	* src/ghex.h broke up print_document into smaller functions
	(print_document): deleted declaration
	(ghex_print_job_info_new): added delcaration
	(ghex_print_job_info_destroy): added declaration
	(ghex_print_job_execute): added declaration
	(GHexPrintJobInfo): added printing range, preview flag, printer
	* src/print.c refactored print_document, merged changes with AleX's
	patch.
	(preview_destroy_cb): deleted, functionality moved to ui.c
	(print_document): deleted, refactored
	(start_job): delted empty function
	(end_job): delted empty function
	(print_header): replaced spaces with tabs