@@ -1,3 +1,7 @@
+2002-03-27  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/converter.c (set_values): take grouping into account.
+
 2002-03-01  Santhana krishnan  <santhana.krishnan@wipro.com>
 
 	* applied a patch to fix problems on undo operatoins.
